# python-bazel-ci-1

.github/workflows/: main.yml
project-root/: BUILD  MODULE.bazel  WORKSPACE  bazel-bin  bazel-out  bazel-project-root  bazel-testlogs
project-root/src/: BUILD  math_utils.py  string_utils.py
project-root/tests/: BUILD  test_math_utils.py  test_string_utils.py
