module(name = "python_bazel_ci")

# Load the rules_python dependency for Python package management
bazel_dep(name = "rules_python", version = "0.31.0")

# Use the pip extension from rules_python
use_extension("@rules_python//python/extensions:pip", "pip")

# Install pip dependencies from requirements.txt
use_repo(name = "pip_deps", extension = "pip", requirements = "@//:requirements.txt")
